--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: ruby
-sudo: required
 
 before_script:
   - gem install curses
 
 rvm:
-  - 2.1.10
-  - 2.2.5
-  - 2.3.1
-
-script: rake compile
+  - 2.2
+  - 2.3
+  - jruby
+  - rbx-2
